# ZoEngine

./: .gitignore  CMakeLists.txt  README.md  shell.nix
resource/xbot/: xbot.gltf
src/: main.cpp
src/model/: CustomCube.cpp  CustomCube.h  GLTFLoader.cpp  GLTFLoader.h  Model.cpp  Model.h
src/shader/: basic.frag  basic.vert  changed.frag  changed.vert
src/tools/: Logger.h
src/ui/: UserInterface.cpp  UserInterface.h
src/vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  SyncObjects.cpp  SyncObjects.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
src/window/: Window.cpp  Window.h
